Added "Assign Block to Selection" to Tools menu
This required that I add a setAllLayoutBlocks method to all LayoutTrack
subclasses.
I also moved setupToolsMenu method to LayoutEditorTools.java.
If passes checks please assign and merge. TIA!

--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
@@ -184,7 +184,10 @@ HideTurnout = Hide Turnout
 HideCrossing = Hide Crossing
 HideSlip = Hide Slip
 HiddenToolTip = Check to hide this track segment when not in edit mode.
+AssignBlockToSelectionTitle = Assign Block To Selection
+AssignBlockToSelectionToolTip = Select this to assign the block from the toolbar to all selected layout tracks
 ScaleTrackDiagram = Scale/Translate Track Diagram
+ScaleTrackDiagramToolTip = Select this to scale and/or translate all layout track
 XFactorLabel = Horizontal (x) Scale Factor:
 YFactorLabel = Vertical (y) Scale Factor:
 FactorHint = Enter factor for expanding (greater than 1.0) or contracting (less than 1.0).
@@ -197,10 +200,13 @@ Message2Label = Warning: Scaling and translation cannot be undone.
 ScaleTranslate = Scale/Translate
 ScaleTranslateHint = Click here to translate and/or scale the track diagram.
 TranslateSelection = Translate (Move) Selection
+TranslateSelectionToolTip = Click here to translate (move) the currently selected items
+
 Message3Label = Only items within selection rectangle will be moved.
 MoveSelection = Move Selection
 MoveSelectionHint = Click here to move items within the selection rectangle.
 UndoTranslateSelection = Undo Translate Selection
+UndoTranslateSelectionToolTip = Click here to undo the translate (move) selection
 BlockAssignReporterTitle = Assign Reporter to Block
 BlockAssignReporter = Sensor {0} has Reporter {1} associated with it; do you want to use the Reporter with this block?
 
@@ -341,14 +347,25 @@ UseDefaultTrackColor = Use Default Track Color
 
 # items specific to Layout Editor tools
 ResetTurnoutSize = Use Program Default Turnout Size
+ResetTurnoutSizeToolTip = Click here to reset to the default turnout size
 SkipInternalTurnout = Skip Unsignaled Internal Turnouts
+SkipInternalTurnoutToolTip = Click here to toggle skipping unsignaled internal turnouts
 SignalsAtTurnout = Set Signals at Turnout
+SignalsAtTurnoutToolTip = Click here to setup the signals at a turnout
 SignalsAtBoundary = Set Signals at Block Boundary
+SignalsAtBoundaryToolTip = Click here to setup the signals at a block boundary
 SignalsAtXoverTurnout = Set Signals at Crossover
+SignalsAtXoverTurnoutToolTip = Click here to setup the signals at a crossover
 SignalsAtLevelXing = Set Signals at Level Crossing
+SignalsAtLevelXingToolTip = Click here to setup the signals at a level crossing
 SignalsAtTToTTurnout = Set Signals at Throat-to-Throat Turnouts
+SignalsAtTToTTurnoutToolTip = Click here to setup the signals on throat-to-throat turnouts
 SignalsAtSlip = Set Signals at a Slip
+SignalsAtSlipToolTip = Click here to setup the signals at a single or double slip
 SignalsAt3WayTurnout = Set Signals at 3-Way Turnout
+SignalsAt3WayTurnoutToolTip = Click here to setup the signals at a 3-way turnout
+EntryExitTitle = Set Signals at Entry / Exit boundary
+EntryExitToolTip = Click here to setup the signals at an entry / exit
 SensorsAtBoundary = Set Sensors at Block Boundary
 SensorsAtTurnout = Set Sensors at Turnout
 SensorsAtLevelXing = Set Sensors at Level Crossing
@@ -602,3 +619,4 @@ CheckUnBlockedTracksMenuTitle = Un-Blocked Tracks
 CheckUnBlockedTracksMenuToolTip = Select this to check for tracks that do not have an assigned block
 CheckNonContiguousBlocksMenuTitle = Non-Contiguous Blocks
 CheckNonContiguousBlocksMenuToolTip = Select this to check for blocks that are not contiguous
+
