remove non-ascii code comments in LE fix EasyDcc calls, add debug, add drivers Bundle

--- a/java/src/jmri/jmrix/easydcc/EasyDccBundle.properties
+++ b/java/src/jmri/jmrix/easydcc/EasyDccBundle.properties
@@ -6,6 +6,8 @@ MenuEasyDCC             = EasyDCC
 MenuItemSendCommand     = Send EasyDCC Command...
 
 SendCommandTitle        = Send EasyDCC Command
+AdapterNetworkName      = EasyDCC via Network
+AdapterSerialName       = EasyDCC via Serial
 
 # EasyDCCTurnout (Add to table pane) items
 AddOutputEntryToolTip   = 102 <br>\
