First commit... (Split and Join)
Minor refactoring Object -> LayoutTrack (in some cases).
Had to make (prev)selectedObject protected (so LET could clear it);
Might should add a method to do that.
Made addAnchor protected (so LET could call it).
Added “Split” and “Join” keywords.
Added null checks after lf.findObjectByName(…).
Un-“optimized” connec[BCD]Name => connect[BCD].getName().

--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
@@ -49,6 +49,8 @@ DoubleCrossoverToolTip = Select to add a double crossover turnout when next clic
 RHCrossoverToolTip = Select to add a right-hand single crossover turnout when next clicking with shift down.
 LHCrossoverToolTip = Select to add a left-hand single crossover turnout when next clicking with shift down.
 Connections = Connections
+Split = Split
+Join = Join
 Dashed = Dashed
 DashedCheckBoxTip = Sets track segment style - checked for dashed, unchecked for solid.
 MainlineBox = Mainline
