Added (disabled) "Cannot Merge At Block Boundary" menu
(when appropriate… ;-)

--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
@@ -51,6 +51,7 @@ LHCrossoverToolTip = Select to add a left-hand single crossover turnout when nex
 Connections = Connections
 SplitTrackSegment = Split Track Segment
 MergeAdjacentTracks = Merge Adjacent Tracks
+CanNotMergeAtBlockBoundary = Cannot Merge at Block Boundary
 Dashed = Dashed
 DashedCheckBoxTip = Sets track segment style - checked for dashed, unchecked for solid.
 MainlineBox = Mainline
