more progress on color internationalization

--- a/java/src/jmri/NamedBeanBundle.properties
+++ b/java/src/jmri/NamedBeanBundle.properties
@@ -299,3 +299,22 @@ Automatic               = Auto
 rsType                  = Locomotive
 FunctionMomentary       = Momentary
 FunctionContinuous      = Continuous
+
+# color lists for jmri.util.ColorUtil and for panel loading.  Note that 
+# these are internal strings and thier use is being phased out.  Translators
+# should not translate these strings.
+ColorTrack = track
+ColorBlack = black
+ColorDarkGray = darkGray
+ColorGray = gray
+ColorLightGray = lightGray
+ColorWhite = white
+ColorRed = red
+ColorPink = pink
+ColorOrange = orange
+ColorYellow = yellow
+ColorGreen = green
+ColorBlue = blue
+ColorMagenta = magenta
+ColorCyan = cyan
+
