add two ColorChooserPanel options that can be used to replace a drop down box and a radio button group. (note these have restricted color entries)

--- a/java/src/jmri/util/swing/UtilBundle.properties
+++ b/java/src/jmri/util/swing/UtilBundle.properties
@@ -5,3 +5,24 @@
 FontSymbol = (symbol)
 # used in BeanSelectCreate pane, copy from beantableBundle key "HardwareAddressToolTip"
 EnterHWaddressAsIntTooltip = Enter an integer as the hardware address for this new item, e.g. 13
+
+#used in the Color Chooser Panels.
+ComboBoxColorChooserName = Color List
+ButtonGroupColorChooserName = Color Buttons
+# interface colors
+Color           = Color
+Black           = Black
+DarkGray        = Dark Gray
+Gray            = Gray
+LightGray       = Light Gray
+White           = White
+Red             = Red
+Pink            = Pink
+Yellow          = Yellow
+Green           = Green
+Orange          = Orange
+Blue            = Blue
+Magenta         = Magenta
+Cyan            = Cyan
+ColorClear      = Clear
+None            = None
