Improve connections error wording (it's not about the multiple system connections, but 2+ errors

--- a/java/src/jmri/jmrix/JmrixBundle.properties
+++ b/java/src/jmri/jmrix/JmrixBundle.properties
@@ -157,8 +157,8 @@ ErrorInvalidValueInGUI  = <html><font color\="\#FF0000">Invalid <b>{0}</b> </htm
 # Startup Exceptions
 # Error creating single connection {0} - UserName, {1} - SystemName
 ErrorSingleConnection   = Unable to create connection \"{0}\" ({1}).
-# Multiple connections error
-ErrorMultipleConnections = Unable to create multiple connections.
+# Multiple connection errors
+ErrorMultipleConnections = Unable to create several of your connections.
 #error message displayed when serial port not found while loading config
 SerialPortNotFound      = Serial port {0} not found.
 #Message displayed when serial port is present but locked by other program
