add buttonswatch color chooser panel.

--- a/java/src/jmri/util/swing/UtilBundle.properties
+++ b/java/src/jmri/util/swing/UtilBundle.properties
@@ -9,6 +9,8 @@ EnterHWaddressAsIntTooltip = Enter an integer as the hardware address for this n
 #used in the Color Chooser Panels.
 ComboBoxColorChooserName = Color List
 ButtonGroupColorChooserName = Color Buttons
+ButtonSwatchColorChooserName = Color Swatch
+SetColor = Set...
 # interface colors
 Color           = Color
 Black           = Black
