--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
@@ -49,6 +49,9 @@ DoubleCrossoverToolTip = Select to add a double crossover turnout when next clic
 RHCrossoverToolTip = Select to add a right-hand single crossover turnout when next clicking with shift down.
 LHCrossoverToolTip = Select to add a left-hand single crossover turnout when next clicking with shift down.
 Connections = Connections
+SplitTrackSegment = Split Track Segment
+MergeAdjacentTracks = Merge Adjacent Tracks
+CanNotMergeAtBlockBoundary = Cannot Merge at Block Boundary
 Dashed = Dashed
 DashedCheckBoxTip = Sets track segment style - checked for dashed, unchecked for solid.
 MainlineBox = Mainline
