Edits from review, add param to SystemsMenu class, check for null memos Use connection name for Acela menu name

--- a/java/src/jmri/jmrix/JmrixBundle.properties
+++ b/java/src/jmri/jmrix/JmrixBundle.properties
@@ -219,7 +219,7 @@ TooltipClearCounters    = Clear the sent and received packet counters
 SentTitle               = Sent
 ReceivedTitle           = Received
 
-# cmri/rps/maple shared items
+# cmri/rps/maple/acela shared items
 ConfigNodesTitle        = Configure Nodes
 LabelPoll               = Poll
 PollToolTip             = Send poll request
