Internationalize number. Fix NX warrant when momentum time exceeds ramp time interval.  Fix delayed start of warrants.

--- a/java/src/jmri/jmrit/logix/WarrantBundle.properties
+++ b/java/src/jmri/jmrit/logix/WarrantBundle.properties
@@ -258,6 +258,7 @@ Halted          = Halted in block "{0}" at Cmd #{1}.
 reStarted       = Restart in block "{0}" at Cmd #{1}.  Resume speed to {2}. 
 reTry           = Unprotected move forced into block "{0}". Resume speed to {2} - Cmd #{1}.
 WaitForClear    = Train {0} waiting in block {1} for {2} to clear ahead.
+TrainReady		= Train {0} ready to start in block {1}
 Occupancy		= Occupancy
 Signal			= Signal
 atSpeed         = {0} ({1}{2})
@@ -406,6 +407,7 @@ ViaToolTip      = Route of the warrant should include this location (Optional).
 AvoidToolTip    = Route of the warrant should exclude this location (Optional).
 NoSpeedProfile  = Selected Roster Entry has no speed profile
 zeroPathLength  = Path {0} in block {1} has length zero.\nCannot run NXWarrants or ramp speeds through blocks with zero length.
+BadSettings     = Cannot run NXWarrant with current settings.
 getPathLength   = \nPlease enter a length in millimeters for path {0} in block {1}.
 BadLengthIn		= Length of Path {0} in block {1} is {2}in. {3} inches is to long for this path.
 BadLengthCm		= Length of Path {0} in block {1} is {2}cm. {3} centimeters is to long for this path.
