--- a/.classpath
+++ b/.classpath
@@ -65,26 +65,34 @@
 	<classpathentry kind="lib" path="lib/pi4j-service.jar"/>
 	<classpathentry kind="lib" path="lib/beansbinding-1.2.1.jar"/>
 	<classpathentry kind="lib" path="lib/hamcrest-core-1.3.jar"/>
-        <classpathentry kind="lib" path="lib/mockito-core-2.0.42-beta.jar"/>
-        <classpathentry kind="lib" path="lib/powermock-mockito2-1.6.5-full.jar"/>
-        <classpathentry kind="lib" path="lib/powermock-api-mockito-common-1.6.5.jar"/>
-        <classpathentry kind="lib" path="lib/cglib-nodep-2.2.2.jar"/>
-        <classpathentry kind="lib" path="lib/javassist-3.20.0-GA.jar"/>
-        <classpathentry kind="lib" path="lib/objenesis-2.2.jar"/>
-        <classpathentry kind="lib" path="lib/byte-buddy-1.2.1.jar"/>
-        <classpathentry kind="lib" path="lib/purejavacomm-1.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/mockito-core-2.0.42-beta.jar"/>
+	<classpathentry kind="lib" path="lib/powermock-mockito2-1.6.5-full.jar"/>
+	<classpathentry kind="lib" path="lib/powermock-api-mockito-common-1.6.5.jar"/>
+	<classpathentry kind="lib" path="lib/cglib-nodep-2.2.2.jar"/>
+	<classpathentry kind="lib" path="lib/javassist-3.20.0-GA.jar"/>
+	<classpathentry kind="lib" path="lib/objenesis-2.2.jar"/>
+	<classpathentry kind="lib" path="lib/byte-buddy-1.2.1.jar"/>
+	<classpathentry kind="lib" path="lib/purejavacomm-1.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/jemmy-2.3.1.1-RELEASE802.jar"/>
 	<classpathentry kind="lib" path="lib/xbee-java-library-1.2.0.jar"/>
-        <classpathentry kind="lib" path="lib/libusb4java-1.2.0-linux-arm.jar"/>
-        <classpathentry kind="lib" path="lib/libusb4java-1.2.0-linux-x86.jar"/>
-        <classpathentry kind="lib" path="lib/libusb4java-1.2.0-linux-x86_64.jar"/>
-        <classpathentry kind="lib" path="lib/libusb4java-1.2.0-osx-x86.jar"/>
-        <classpathentry kind="lib" path="lib/libusb4java-1.2.0-osx-x86_64.jar"/>
-        <classpathentry kind="lib" path="lib/libusb4java-1.2.0-windows-x86.jar"/>
-        <classpathentry kind="lib" path="lib/libusb4java-1.2.0-windows-x86_64.jar"/>
-        <classpathentry kind="lib" path="lib/usb-api-1.0.2.jar"/>
-        <classpathentry kind="lib" path="lib/usb4java-1.2.0.jar"/>
-        <classpathentry kind="lib" path="lib/usb4java-javax-1.2.0.jar"/>
-        <classpathentry kind="lib" path="lib/org-openide-util-lookup-RELEASE82.jar"/>
+	<classpathentry kind="lib" path="lib/libusb4java-1.2.0-linux-arm.jar"/>
+	<classpathentry kind="lib" path="lib/libusb4java-1.2.0-linux-x86.jar"/>
+	<classpathentry kind="lib" path="lib/libusb4java-1.2.0-linux-x86_64.jar"/>
+	<classpathentry kind="lib" path="lib/libusb4java-1.2.0-osx-x86.jar"/>
+	<classpathentry kind="lib" path="lib/libusb4java-1.2.0-osx-x86_64.jar"/>
+	<classpathentry kind="lib" path="lib/libusb4java-1.2.0-windows-x86.jar"/>
+	<classpathentry kind="lib" path="lib/libusb4java-1.2.0-windows-x86_64.jar"/>
+	<classpathentry kind="lib" path="lib/usb-api-1.0.2.jar"/>
+	<classpathentry kind="lib" path="lib/usb4java-1.2.0.jar"/>
+	<classpathentry kind="lib" path="lib/usb4java-javax-1.2.0.jar"/>
+	<classpathentry kind="lib" path="lib/org-openide-util-lookup-RELEASE82.jar"/>
+	<classpathentry kind="lib" path="lib/cucumber-core-1.2.5.jar"/>
+	<classpathentry kind="lib" path="lib/cucumber-java-1.2.5.jar"/>
+	<classpathentry kind="lib" path="lib/cucumber-java8-1.2.5.jar"/>
+	<classpathentry kind="lib" path="lib/cucumber-junit-1.2.5.jar"/>
+	<classpathentry kind="lib" path="lib/cucumber-jvm-deps-1.0.5.jar"/>
+	<classpathentry kind="lib" path="lib/gherkin-2.12.2.jar"/>
+	<classpathentry kind="lib" path="lib/gherkin-jvm-deps-1.0.3.jar"/>
+	<classpathentry kind="lib" path="lib/gherkin3-3.0.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
