use Bundle for systemsmenu string, move key from all JmrixSystemsBundles, delete unused key

--- a/java/src/jmri/jmrix/JmrixBundle.properties
+++ b/java/src/jmri/jmrix/JmrixBundle.properties
@@ -2,6 +2,10 @@
 #
 # Default properties for the jmri.jmrix classes
 
+# menu
+MenuSystems             = Systems
+
+# network adapters preferences
 noneSelected            = (none selected)
 noPortsFound            = (no ports found!)
 none                    = (none)
