--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
@@ -87,7 +87,7 @@ IconChangeInfo = <html>Select new image from file,<br>then click an upper previe
 SetIconButton = Choose Icon...
 
 ChangeIcons = Change Icons
-ChangeIconToolTip = Click to change icons used to represent Sensors, Signal Heads or Label (whichever is checked at the right).
+ChangeIconToolTip = Select to change icons used to represent Sensors, Signal Heads or Label (whichever is checked at the right).
 ChangeIconNotApplied = This only works when a Sensor, Signal Head or\nLabel is selected to the right of this button.
 SensorIcon = Sensor Icon
 SensorButtonToolTip = Select to add a Sensor icon when next clicking with shift down.
@@ -144,8 +144,8 @@ RayAngle = Ray Track Angle
 AddRayTrack = New Ray Track
 DeleteRayTrack = Delete Ray Track
 RayAngleHint = Enter angle of Ray Track to add or delete (12 o'clock = 0, 3 o'clock = 90 degrees, etc.).
-AddRayTrackHint = Click to add a new Ray Track at the angle entered above.
-DeleteRayTrackHint = Click to delete the Ray Track closest to the angle entered above.
+AddRayTrackHint = Select to add a new Ray Track at the angle entered above.
+DeleteRayTrackHint = Select to delete the Ray Track closest to the angle entered above.
 Unconnected = Unconnected Ray
 Connected = Connected to
 EditTurnoutNameHint = Edit Turnout Name to change the physical turnout linked to this panel turnout.
@@ -181,7 +181,7 @@ ReporterLocationXHint = Enter horizontal coordinate of upper left corner.
 ReporterLocationY = , y
 ReporterLocationYHint = Enter vertical coordinate of upper left corner.
 AddNewLabel = Add New Label
-ReporterDoneHint = Click to add new Reporter Icon as specified above.
+ReporterDoneHint = Select to add new Reporter Icon as specified above.
 HideTrack = Hide Track
 HideTurnout = Hide Turnout
 HideCrossing = Hide Crossing
@@ -367,8 +367,8 @@ SignalsAtSlip = Set Signals at a Slip
 SignalsAtSlipToolTip = Click here to setup the signals at a single or double slip
 SignalsAt3WayTurnout = Set Signals at 3-Way Turnout
 SignalsAt3WayTurnoutToolTip = Click here to setup the signals at a 3-way turnout
-EntryExitTitle = Set Signals at Entry / Exit boundary
-EntryExitToolTip = Click here to setup the signals at an entry / exit
+EntryExitTitle = Entry Exit
+EntryExitToolTip = Click here to setup entry exit
 SensorsAtBoundary = Set Sensors at Block Boundary
 SensorsAtTurnout = Set Sensors at Turnout
 SensorsAtLevelXing = Set Sensors at Level Crossing
@@ -382,7 +382,7 @@ TurnoutBName = Turnout B Name (farthest from throat)
 SignalsTurnoutNameHint = Enter name (system or user) of turnout where signals are needed.
 SignalsBlockNameHint = Enter name of one block where signals are needed at block boundary.
 GetSaved = Get Saved
-GetSavedHint = Click to retrieve signal heads previously stored.
+GetSavedHint = Select to retrieve signal heads previously stored.
 ThroatContinuing = Throat - Continuing
 ThroatDiverging = Throat - Diverging
 Continuing = Continuing
@@ -417,7 +417,7 @@ SetAllLogicHint = Check to set up Simple Signal Logic for all Signal Heads
 East/SouthBound = East (or South) Bound
 West/NorthBound = West (or North) Bound
 ChangeSignalIcon = Change Signal Head Icon
-ChangeSignalIconHint = Click to change icons used to represent signal heads (Use left-facing icons)
+ChangeSignalIconHint = Select to change icons used to represent signal heads (Use left-facing icons)
 SignalHeadNameHint = Enter name (system or user) of signal head located here.
 SignalHeadEastNameHint = Enter name (system or user) of signal head for right-bound (east) or down-bound (south) trains.
 SignalHeadWestNameHint = Enter name (system or user) of signal head for left-bound (west) or up-bound (north) trains.
@@ -510,7 +510,7 @@ Boundary = Boundary with
 ViewBlockRouting = View Block Routing
 
 ChangeSensorIcon = Change Sensor Icon
-ChangeSensorIconHint = Click to change icons used to represent sensors.
+ChangeSensorIconHint = Select to change icons used to represent sensors.
 
 SensorsError1 = Error - No turnout name was entered. Please enter a turnout name or Cancel.
 SensorsError2 = Error - No turnout is defined for "{0}". Please enter \na turnout name in the Turnout Table and on the panel.
