--- a/java/src/jmri/jmrit/logix/WarrantBundle.properties
+++ b/java/src/jmri/jmrit/logix/WarrantBundle.properties
@@ -86,34 +86,37 @@ speedName       = Speed Name
 speedValue      = Speed Value
 appearance      = Appearance
 throttleStepMode= Throttle StepMode
-LabelInterpretation= Interpretation of Speed Name Value 
-percentNormal   = % Normal
+LabelInterpretation= Interpretation of Speed Name Values
+Normal			= Script
+percent			= Percent
+milliseconds	= Milliseconds 
+percentNormal   = % Script
 percentThrottle = % Throttle
 speedMph        = Miles per hour
 speedKmph       = Kilometers per hour
 throttlesetting = Throttle setting
 badSpeed        = {0} is an invalid Throttle setting. Should be a decimal between 0.008 and 1.00
 badIncr			= {0} of {1} out of range for ramp increment.
-TimeIncrement   = Ramp Step Time:
+TimeIncrement   = Ramp Step time increment:
 RampIncrement   = Ramp Step throttle increment:
-#timeToolTip     = The time between speed changes must be at least 200 milliseconds.
-#rampIncrWarning = {0} is an extreme amount for step increment. A value between .03 and .10 is more reasonable.
+#timeWarning     = The time between speed changes must be at least 200 milliseconds.
+rampIncrWarning = {0}% is an extreme amount for step increment. A value between .794% and 8% is more reasonable.
 ThrottleScale   = Throttle Setting/Speed Factor:
 StepIncrement   = StepIncrements
 ToolTipLayoutScale= Needed to compute speed and distance for warrants
 ToolTipSearchDepth= Upper limit for the number of OBlocks in a warrant route
 ToolTipSpeedNameTable=Every Speed Name used in your Signal System's aspects must be a row in this table
 ToolTipAppearanceTable=Map SignalHead appearance to Speed Name. Every SignalHead appearance must be a row in this table
-ToolTipRampIncrement=Throttle setting increment for each speed change when ramping speed
+ToolTipRampIncrement=Throttle setting increment for each speed change when ramping speed. Enter a percentage of full throttle
 ToolTipTimeIncrement=Length of time in milliseconds between each speed change when ramping speed (from 200 to 10,000 ms)
 ToolTipShareRoute = Train has clearance to enter origin block only. Warrant allocation occurs as train is permitted to proceed.
 ToolTipNoRamping = Warrant makes immediate speed changes when entering the approach block
 ToolTipRunETOnly = Warrant runs on elapsed time only. Does not use block detection.
-ToolTipInterpretation=Choose how the code should interpret Speed Name Values
-ToolTipPercentNormal=Value is percentage of current speed as recorded with unrestricted signal aspect
-ToolTipPercentThrottle= Value is percentage of the full throttle setting  (requires Roster is speed matched)
-ToolTipSpeedMph = Value is scale miles per hour (requires calibrated addresses)
-ToolTipSpeedKmph= Value is scale kilometers per hour (requires calibrated addresses)
+ToolTipInterpretation=Choose how the code should interpret Speed Name Values to restrict the speed
+ToolTipPercentNormal=Value is percentage of the current recorded speed
+ToolTipPercentThrottle= Value is percentage of the full throttle setting (speed matched roster recommended)
+ToolTipSpeedMph = Value is scale miles per hour (speed profile recommended)
+ToolTipSpeedKmph= Value is scale kilometers per hour (speed profile recommended)
 ToolTipThrottleScale=Ratio that calibrates the throttle setting to scale track speed of the train.
 ToolTipStartDistance=Distance from where the train starts to the exit portal of the origin block. 
 ToolTipStopDistance=Distance from where the train enters the entry portal of the destination block to its stopping point.
