Migrate TMCC for multi

--- a/java/src/jmri/jmrix/tmcc/TmccBundle.properties
+++ b/java/src/jmri/jmrix/tmcc/TmccBundle.properties
@@ -4,8 +4,11 @@
 
 MenuTMCC                    = TMCC
 
-MenuItemCommandMonitor      = TMCC Monitor
-MenuItemSendCommand         = Send Command
+MenuItemCommandMonitor      = TMCC Monitor...
+MenuItemSendCommand         = Send TMCC Command...
+
+SendCommandTitle            = Send TMCC Command
+AdapterSerialName           = TMCC via Serial
 
 # TMCC Turnout (Add to table pane) items, similar to C/MRI pattern
 AddOutputEntryToolTip = 3 (Node 0, Output 3)<br>\
