--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
@@ -380,6 +380,7 @@ SignalMastsAtLayoutSlip = Set Signal Masts at a Slip
 TurnoutAName = Turnout A Name (closest to throat)
 TurnoutBName = Turnout B Name (farthest from throat)
 SignalsTurnoutNameHint = Enter name (system or user) of turnout where signals are needed.
+SensorsTurnoutNameHint = Enter name (system or user) of turnout where sensors are needed.
 SignalsBlockNameHint = Enter name of one block where signals are needed at block boundary.
 GetSaved = Get Saved
 GetSavedHint = Select to retrieve signal heads previously stored.
