Set anyma vendor and product id's
Refactored usb location to  location id.
USB location id now include 0x prefix and right (zero) padding to 8 digits. (following Apple's location ID format).

--- a/java/src/jmri/util/usb/Bundle.properties
+++ b/java/src/jmri/util/usb/Bundle.properties
@@ -18,6 +18,6 @@ UsbDeviceVendorId=Vendor ID
 #USB Product ID for device
 UsbDeviceProductId=Product ID
 #USB Location for device
-UsbDeviceLocation=Location
+UsbDeviceLocationId=Location ID
 #Table text when there is no selection
 EmptySelection=No device selected
