TMCC migrated to multi connection and multichar prefix, tests, Simulator TMCC help

--- a/java/src/jmri/jmrix/tmcc/TmccBundle.properties
+++ b/java/src/jmri/jmrix/tmcc/TmccBundle.properties
@@ -10,9 +10,6 @@ MenuItemSendCommand         = Send TMCC Command...
 SendCommandTitle            = Send TMCC Command
 AdapterSerialName           = TMCC via Serial
 
-# TMCC Turnout (Add to table pane) items, similar to C/MRI pattern
-AddOutputEntryToolTip = 3 (Node 0, Output 3)<br>\
-4003 (Node 4, Output 3)<br>\
-4B3	(Node 4, Output 3)<br>\
-Node: 0 - 128<br>\
-Max. value for Output: 999
+# TMCC Turnout (Add to table pane) items
+AddOutputEntryToolTip = 3 (Turnout 3)<br>\
+enter as number from 1 to 511 (inclusive).
