Enhancement: LayoutEditor- Collect Options Menu Options
If checks pass please assign and merge! Thanks! ;-)

--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle.properties
@@ -111,8 +111,12 @@ SecondTurnoutNameToolTip = Enter name of second physical turnout.
 StateToolTip = Select turnout state corresponding to continuing route.
 ContinuingState = Continuing Route Turnout State
 ConnectingBlock = Connecting Block
-BlockID = Block: Name
+BlockID = Block Name:
 BlockIDToolTip = Enter name of Block for new turnout, level crossing, or track segment.
+HighlightSelectedBlockTitle = Highlight
+HighlightSelectedBlockToolTip = Check to highlight the selected block on the layout
+BlockSensorName = Block Sensor Name
+
 OccupancySensorToolTip = Enter name of occupancy sensor for this block; no entry means don't change.
 BlockContentsLabel = Block Contents
 Track = Track
@@ -181,7 +185,6 @@ ReporterLocationXHint = Enter horizontal coordinate of upper left corner.
 ReporterLocationY = , y
 ReporterLocationYHint = Enter vertical coordinate of upper left corner.
 AddNewLabel = Add New Label
-ReporterDoneHint = Select to add new Reporter Icon as specified above.
 HideTrack = Hide Track
 HideTurnout = Hide Turnout
 HideCrossing = Hide Crossing
@@ -289,7 +292,6 @@ TabTrack = Track
 TabLabel = Labels
 TabIcon = Icons
 
-HighlightSelectedBlock = Highlight Selected Block
 FontSize = Font Size
 
 DropDownListsDisplayOrder = Drop Down Lists Display Order...
@@ -300,16 +302,27 @@ DropDownListsDisplayOrderSystemNameUserName = System Name followed by User Name
 AllowRepositioning = Allow Repositioning
 AllowLayoutControl = Allow Layout Control
 AllowTurnoutAnimation = Allow Turnout Animation
-ShowEditHelp = Show Help Bar in Edit Mode
-ShowEditGrid = Show Grid in Edit Mode
-ShowEditGridAccelerator = G
 AutoAssignBlock = Automatically Assign Blocks to Track
 HideTrackConLines = Hide Track Construction Lines
 UseDirectTurnoutControl = Use Direct Turnout Control
+
+GridMenuTitle = Grid Options
+ShowEditHelp = Show Help Bar in Edit Mode
+ShowEditGrid = Show Grid in Edit Mode
+ShowEditGridAccelerator = G
 SnapToGridOnAdd = Snap to Grid when Adding
 SnapToGridOnAddAccelerator = A
 SnapToGridOnMove = Snap to Grid when Moving
 SnapToGridOnMoveAccelerator = M
+
+AddMenuTitle = Add
+AddBackground = Add Background Image
+AddTurntable = Add Turntable
+AddReporter = Add Reporter Label
+ReporterDoneHint = Select to add new Reporter Icon as specified above.
+
+TrackMenuTitle = Track Options
+
 TooltipSubMenu = Show Icon tooltips
 TooltipNone = Never
 TooltipAlways = Always
@@ -320,6 +333,7 @@ TurnoutCirclesOn = Show Turnout Circles
 AntialiasingOn = Enable antialiasing (Smoother lines)
 NewTitle = New Title
 EditTitle = Edit Title
+#SetBackgroundColor = Set Background Color
 
 SetGridSizes = Set Grid Sizes
 PrimaryGridSize = Primary Grid Size
@@ -329,10 +343,6 @@ SecondaryGridSizeHint = Enter width for secondary grid size
 
 SetGridSizesMessageTitle = Grid Sizes
 
-AddBackground = Add Background Image
-#SetBackgroundColor = Set Background Color
-AddTurntable = Add Turntable
-AddReporter = Add Reporter Label
 EnterTitle = Enter New Title
 EditTitleMessageTitle = Edit Layout Name
 SetTrackWidth = Set Track Line Width
