MastBuilder i18n (just for fun, not in any menu, no code behind gui) move some keys to jmrit.Bundle Fix non-ascii code comments in LE

--- a/java/src/jmri/jmrit/Bundle.properties
+++ b/java/src/jmri/jmrit/Bundle.properties
@@ -34,6 +34,7 @@ MenuItemSignalMastTable = Signal Masts
 MenuItemSignalGroupTable = Signal Groups
 MenuItemSignalMastLogicTable = Signal Mast Logic
 MenuItemRailComTable = RailCom IDs
+MastBuilderTitle    = Mast Builder
 
 MenuThrottles = Throttles
 MenuItemNewThrottle = New Throttle
@@ -182,6 +183,7 @@ center          = Center
 Name            = Name
 Length          = Length
 
+SigSys          = Signal System
 # interface colors
 # these same keys are used in Display/PositionableProperties, Operations and signaling/EntryExit
 Color           = Color
