i18n Send Packet tool gui add spinners for wait Dutch translation

--- a/java/src/jmri/jmrit/mastbuilder/MastBuilderBundle.properties
+++ b/java/src/jmri/jmrit/mastbuilder/MastBuilderBundle.properties
@@ -1,6 +1,7 @@
 # MastBuilderBundle.properties
 #
 # Default properties for the jmri.jmrit.mastbuilder.MastbuilderPane
+# Note: not used as of JMRI 4.9.6
 
 NameTypeLabel       = Aspect name \\ Select type
 
