Logging i18n Dutch translation add title to Message Log output window

--- a/java/src/jmri/jmrit/Bundle.properties
+++ b/java/src/jmri/jmrit/Bundle.properties
@@ -220,3 +220,10 @@ XmlFileValidateAction = Validate XML File
 
 # AmpMeter items
 TrackCurrentMeterTitle = Track Current Meter
+
+# Log tool items
+LogOutputTitle  = Message Log
+LogInputTitle   = Add Log Entry
+LogSendToolTip  = Add message to the log file
+LogMessageLabel = Message:
+AddButtonText   = Add
