more internationlzation of operations tests; some test cleanup

--- a/java/src/jmri/jmrit/operations/JmritOperationsBundle.properties
+++ b/java/src/jmri/jmrit/operations/JmritOperationsBundle.properties
@@ -49,6 +49,10 @@ Owner               = Owner
 Hazardous           = Hazardous
 Destination         = Destination
 Kernel              = Kernel
+Passenger           = Passenger
+Caboose             = Caboose
+Fred                = FRED
+Utility             = Utility
 
 # Conductor and Yardmaster common
 # buttons titles/action verbs
