--- a/java/test/apps/PanelPro/profiles/EasyDcc_Simulator/profile/profile.properties
+++ b/java/test/apps/PanelPro/profiles/EasyDcc_Simulator/profile/profile.properties
@@ -1,8 +1,8 @@
-#JMRI Preferences version 4.9.3ish+jake+20170823T0253Z+Rcadf9de1ce
-#Tue Aug 22 20:00:45 PDT 2017
+#JMRI Preferences version 4.9.6ish+me+20171108T1748Z+Rebfe011413
+#Wed Nov 08 18:49:34 CET 2017
 apps-gui.fontSize=0
-apps-gui.graphicTableState=false
-apps-gui.locale=en-US
+apps-gui.graphicTableState=true
+apps-gui.locale=nl
 apps-gui.lookAndFeel=com.apple.laf.AquaLookAndFeel
 apps-gui.nonstandardMouseEvent=false
 apps-gui.showToolTipDismissDelay=4000
@@ -10,7 +10,7 @@ apps-gui.verticalToolBar=false
 apps-systemconsole.fontFamily=Monospaced
 apps-systemconsole.fontSize=12
 apps-systemconsole.fontStyle=0
-apps-systemconsole.scheme=0
+apps-systemconsole.scheme=7
 apps-systemconsole.wrapStyle=2
 jmri-implementation.scripts=program\:jython/
 jmri-implementation.user-files=profile\:
@@ -20,35 +20,35 @@ jmri-jmris-simpleserver.port=2048
 jmri-jmris-srcp.port=4303
 jmri-jmrit-roster.defaultOwner=
 jmri-jmrit-roster.directory=preference\:
-jmri-jmrit-symbolicprog.canCacheDefault=true
-jmri-jmrit-symbolicprog.defaultFile=Advanced
+jmri-jmrit-symbolicprog.canCacheDefault=false
+jmri-jmrit-symbolicprog.defaultFile=Comprehensive
 jmri-jmrit-symbolicprog.doConfirmRead=false
-jmri-jmrit-symbolicprog.showCvNumbers=true
+jmri-jmrit-symbolicprog.showCvNumbers=false
 jmri-jmrit-symbolicprog.showEmptyPanes=true
 jmri-jmrix-loconet-loconetovertcp.port=1234
 jmri-managers.allInternalDefaults=false
-jmri-managers.defaults.jmri-AddressedProgrammerManager=Internal
-jmri-managers.defaults.jmri-CommandStation=Internal
-jmri-managers.defaults.jmri-ConsistManager=EasyDcc
-jmri-managers.defaults.jmri-GlobalProgrammerManager=Internal
-jmri-managers.defaults.jmri-PowerManager=EasyDcc
-jmri-managers.defaults.jmri-ThrottleManager=EasyDcc
+jmri-managers.defaults.jmri-AddressedProgrammerManager=EasyDCC Simulator
+jmri-managers.defaults.jmri-CommandStation=EasyDCC Simulator
+jmri-managers.defaults.jmri-ConsistManager=EasyDCC Simulator
+jmri-managers.defaults.jmri-GlobalProgrammerManager=EasyDCC Simulator
+jmri-managers.defaults.jmri-PowerManager=EasyDCC Simulator
+jmri-managers.defaults.jmri-ThrottleManager=EasyDCC Simulator
 jmri-web-server.allowRemoteConfig=false
 jmri-web-server.clickDelay=1
 jmri-web-server.disableFrames=false
 jmri-web-server.disallowedFrames.0=DecoderPro
 jmri-web-server.disallowedFrames.1=PanelPro
-jmri-web-server.disallowedFrames.2=EasyDCC Simulator
+jmri-web-server.disallowedFrames.2=LocoNet Simulator
 jmri-web-server.disallowedFrames.3=Preferences
 jmri-web-server.disallowedFrames.4=WiThrottle
 jmri-web-server.disallowedFrames.5=Change Signal Head Icons
 jmri-web-server.disallowedFrames.6=Item Palette
 jmri-web-server.port=12080
 jmri-web-server.railRoadName=Test Ops Entry
-jmri-web-server.readonlyPower=true
+jmri-web-server.readonlyPower=false
 jmri-web-server.redirectFramesToPanels=true
 jmri-web-server.refreshDelay=5
 jmri-web-server.simple=false
 jmri-web-server.useAjax=true
-profile.id=EasyDCC_Simulator.3eac0cdc
+profile.id=EasyDcc_Simulator.3f033c2b
 profile.name=EasyDCC Simulator
