Move shared LocoNet keys from specific DB150 props to LocoNetBundle 2 buttons to NBB, fix CmdStn code paths Correct props headers

--- a/java/src/jmri/jmrix/loconet/LocoNetBundle.properties
+++ b/java/src/jmri/jmrix/loconet/LocoNetBundle.properties
@@ -86,3 +86,12 @@ LN_MSG_SENSOR_STATE_HIGH    = High
 # LnTurnout (Add to table pane) items
 AddOutputEntryToolTip = enter a number from 1 to 2048 (inclusive).
 AddInputEntryToolTip = enter a number from 1 to 2048 (inclusive).
+
+#cmdstnconfig shared Bundle items (hardware specific strings fetched using ResourceBundle)
+LabelC = C
+LabelT = T
+#ButtonRead = Read - is in jmri.NamedBeanBundle
+#ButtonWrite = Write - idem
+CheckBoxReserved = Show reserved option switches
+Reserved = Reserved
+HeadingText = Items describe effect on system operation when set "closed"
