--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS210options.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS210options.properties
@@ -10,14 +10,14 @@ MIN_OPTION = 1
 MAX_OPTION = 49
 
 LabelTop = DCS210 Programmer
-LabelC = C
-LabelT = T
-ButtonRead = Read
-ButtonWrite = Write
-CheckBoxReserved = Show reserved option switches
-Reserved = Reserved
-
-HeadingText = Items describe effect on system operation when set "closed"
+#LabelC = C - all moved to jmri.jmrix.loconet.LocoNetBundle
+#LabelT = T
+#ButtonRead = Read
+#ButtonWrite = Write
+#CheckBoxReserved = Show reserved option switches
+#Reserved = Reserved
+#
+#HeadingText = Items describe effect on system operation when set "closed"
 
 Option2 = 2: Make DCS210 a booster only, not a command station
 Option3 = 3: Booster is autoreversing
