fix cmdstn French character encoding

--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS50options.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS50options.properties
@@ -12,7 +12,7 @@ MAX_OPTION = 49
 LabelTop = DCS50 (Zephyr) Programmer
 
 Option1 = 1: One jump port (normally two)
-Option2 = 2: Booster/Throttle, not command station
+Option2 = 2: Booster/Throttle, not Command Station
 Option3 = 3: Booster is autoreversing
 Option5 = 5: No change allowed for throttle ID, Vmax or brake rate
 Option6 = 6: Function 3 is non-latching
