--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/Defaultoptions.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/Defaultoptions.properties
@@ -12,7 +12,7 @@ MAX_OPTION = 49
 
 LabelTop = Command Station Programmer
 
-Option2 = 2: Set unit to be booster only, not command station
+Option2 = 2: Set unit to be Booster only, not Command Station
 Option3 = 3: Booster is autoreversing
 Option5 = 5: Command station master mode
 Option9 = 9: Allow Motorola trinary echo for 1-256
