--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/DB150options.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/DB150options.properties
@@ -11,24 +11,15 @@ MIN_OPTION = 1
 MAX_OPTION = 57
 
 LabelTop = DB150 (Empire Builder) Programmer
-LabelC = C
-LabelT = T
-ButtonRead = Read
-ButtonWrite = Write
-CheckBoxReserved = Show reserved option switches
-Reserved = Reserved
-
-HeadingText = Items describe effect on system operation when set "closed"
 
 Option2 = 2: Booster only override
 Option3 = 3: Booster is autoreversing
-Option5 = 5: Command station master mode
+Option5 = 5: Command station master mode (normally 'c')
 Option13 = 13: Raise loco address purge time to 600 seconds
 Option14 = 14: Disable loco address purging
 Option15 = 15: Purge will force a loco to zero speed
 Option17 = 17: Automatic advanced consists are disabled
 Option18 = 18: Extend booster short shutdown to 1/2 second
-Option19 = 19: Reserved
 Option20 = 20: Disable address 0 analog operation
 Option21 = 21: Global default for new loco: FX
 Option22 = 22: Global default for new loco: 28 step
@@ -37,13 +28,11 @@ Option27 = 27: Disable normal switch commands (Bushby bit)
 Option28 = 28: Disable DS54 interrogate at power on
 Option33 = 33: Restore track power to prior state at power on
 Option34 = 34: Allow track to power up to run state
-Option36 = 36: Clear all mobile decoder info and consists
+Option36 = 36: Clear all mobile decoder info and consists in DB150
 Option38 = 38: Clear the loco roster
-Option39 = 39: Clear all internal memory
+Option39 = 39: Clear all internal memory states
 Option41 = 41: Diagnostic click when LocoNet command received
 Option42 = 42: Disable 3 beeps when loco address purged
 Option43 = 43: Disable LocoNet update of track status
-Option50 = 50: Longer booster short circuit recovery time
+Option50 = 50: Longer Booster short circuit recovery time
 Option51 = 51: Do not allow EXT voltage RESTART
-
-
