--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS210options.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS210options.properties
@@ -10,14 +10,6 @@ MIN_OPTION = 1
 MAX_OPTION = 49
 
 LabelTop = DCS210 Programmer
-#LabelC = C - all moved to jmri.jmrix.loconet.LocoNetBundle
-#LabelT = T
-#ButtonRead = Read
-#ButtonWrite = Write
-#CheckBoxReserved = Show reserved option switches
-#Reserved = Reserved
-#
-#HeadingText = Items describe effect on system operation when set "closed"
 
 Option2 = 2: Make DCS210 a booster only, not a command station
 Option3 = 3: Booster is autoreversing
@@ -39,10 +31,10 @@ Option31 = 31: Fast route/switch output when not in trinary
 Option33 = 33: Restore track power to prior state at power on
 Option34 = 34: Allow track to power up to run state
 Option35 = 35: Disable Loco Reset Button
-Option36 = 36: Clear all mobile decoder info and consists
-Option37 = 37: Clear all routes
+Option36 = 36: Clear all mobile decoder info and consists in DCS210
+Option37 = 37: Clear all routes in DCS210
 Option38 = 38: Loco Reset button activates 'Slot zeroing'
-Option39 = 39: Clear all internal memory
+Option39 = 39: Clear all internal memory states
 Option40 = 40: Reset all mobile decoder info, consists, routes, and Voltage Trim to factory default
 Option41 = 41: Diagnostic click when LocoNet command received or Routes being output
 Option42 = 42: Disable 2 beeps when loco address purged
