--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS51options.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS51options.properties
@@ -11,8 +11,8 @@ MAX_OPTION = 49
 
 LabelTop = DCS51 (Zephyr Xtra) Programmer
 
-Option1 = 1: One jump port (normally two)
-Option2 = 2: Booster/Throttle, not Command Station
+Option1 = 1: One Jump port (t = two Jump ports)
+Option2 = 2: Run as Booster/Throttle, not Command Station
 Option3 = 3: Booster is autoreversing
 Option5 = 5: No change allowed for throttle ID, Vmax or brake rate
 Option6 = 6: Function 3 is non-latching
@@ -32,6 +32,6 @@ Option27 = 27: Disable normal switch commands (Bushby bit)
 Option28 = 28: Disable DS54 interrogate at power on
 Option33 = 33: Restore track power to prior state at power on
 Option34 = 34: Allow track to power up to run state
-Option39 = 39: Clear all internal memory
+Option39 = 39: Clear all internal memory states
 Option43 = 43: Disable LocoNet update of track status
 Option45 = 45: Disable reply for switch state request
