--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/Defaultoptions.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/Defaultoptions.properties
@@ -12,7 +12,7 @@ MAX_OPTION = 49
 
 LabelTop = Command Station Programmer
 
-Option2 = 2: Set unit to be Booster only, not Command Station
+Option2 = 2: Run unit as Booster only, not Command Station
 Option3 = 3: Booster is autoreversing
 Option5 = 5: Command station master mode
 Option9 = 9: Allow Motorola trinary echo for 1-256
@@ -35,10 +35,10 @@ Option28 = 28: Disable DS54 interrogate at power on
 Option31 = 31: Meter route/switch output when not in trinary
 Option33 = 33: Restore track power to prior state at power on
 Option34 = 34: Allow track to power up to run state
-Option36 = 36: Clear all mobile decoder info and consists
-Option37 = 37: Clear all routes
+Option36 = 36: Clear all mobile decoder info and consists in CS
+Option37 = 37: Clear all routes in Command Station
 Option38 = 38: Clear the loco roster
-Option39 = 39: Clear all internal memory
+Option39 = 39: Clear all internal memory states
 Option41 = 41: Diagnostic click when LocoNet command received
 Option42 = 42: Disable 3 beeps when loco address purged
 Option43 = 43: Disable LocoNet update of track status
