--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/Mix-Masteroptions.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/Mix-Masteroptions.properties
@@ -24,9 +24,9 @@ Option28 = 28: Disable DS54 interrogate at power on
 Option30 = 30: Disable cyclic refresh of loco functions F5-F12
 Option33 = 33: Restore track power to prior state at power on
 Option34 = 34: Allow track to power up to run state
-Option36 = 36: Clear all mobile decoder info and consists
+Option36 = 36: Clear all mobile decoder info and consists in CS
 Option38 = 38: Clear the loco roster
-Option39 = 39: Clear all internal memory
+Option39 = 39: Clear all internal memory states
 Option45 = 45: Disable reply for switch state request
 Option46 = 46: Brake generator half-speed (default zero-speed)
 Option47 = 47: Enable DCC output as brake speed generator
