Add Dutch props for all command stations, add German for DSC210 Add tooltip for FX setting on OpSw 21-23

--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS210options.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS210options.properties
@@ -23,6 +23,7 @@ Option20 = 20: Disable address 0 analog operation
 Option21 = 21: Global default for new loco: FX
 Option22 = 22: Global default for new loco: 28 step
 Option23 = 23: Global default for new loco: 14 step
+# next line has a special meaning in the DCS210
 Option25 = 25: Disable route echo over LocoNet
 Option26 = 26: Enable routes
 Option27 = 27: Disable normal switch commands (Bushby bit)
