--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/LocoBufferoptions.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/LocoBufferoptions.properties
@@ -12,7 +12,7 @@ MAX_OPTION = 41
 LabelTop = LocoBuffer-PS (Programming Station) Programmer
 
 Option4 = 4: Programmer mode only
-Option5 = 5: Command station master mode
+Option5 = 5: Command Station master mode
 Option13 = 13: Raise loco address purge time to 600 seconds
 Option14 = 14: Disable loco address purging
 Option22 = 22: Global default for new loco: 28 step
