--- a/java/src/jmri/jmrix/loconet/LocoNetBundle.properties
+++ b/java/src/jmri/jmrix/loconet/LocoNetBundle.properties
@@ -95,3 +95,9 @@ LabelT = T
 CheckBoxReserved = Show reserved option switches
 Reserved = Reserved
 HeadingText = Items describe effect on system operation when set "closed"
+CmdStnConfigFxToolTip = <html><table><tr>sw21-sw22-sw23<td></td><td></td></tr>\
+  <tr>t-t-t<td></td><td>128 step mode</td></tr>\
+  <tr>t-t-c<td></td><td>128 step FX mode</td></tr>\
+  <tr>c-t-t<td></td><td>14 step mode</td></tr>\
+  <tr>c-c-t<td></td><td>28 step mode</td></tr>\
+  </table></html>
