--- a/java/src/jmri/jmrix/loconet/LocoNetBundle.properties
+++ b/java/src/jmri/jmrix/loconet/LocoNetBundle.properties
@@ -95,7 +95,7 @@ LabelT = T
 CheckBoxReserved = Show reserved option switches
 Reserved = Reserved
 HeadingText = Items describe effect on system operation when set "closed"
-CmdStnConfigFxToolTip = <html><table><tr>sw21-sw22-sw23<td></td><td></td></tr>\
+CmdStnConfigFxToolTip = <html><table><tr>set sw21-sw22-sw23<td></td><td>to activate:</td></tr>\
   <tr>t-t-t<td></td><td>128 step mode</td></tr>\
   <tr>t-t-c<td></td><td>128 step FX mode</td></tr>\
   <tr>c-t-t<td></td><td>14 step mode</td></tr>\
