--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/Intelliboxoptions.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/Intelliboxoptions.properties
@@ -1,6 +1,6 @@
 # Intelliboxoptions.properties
 #
-# Default command station options for the Intellibox.
+# Default command station options for the Intellibox-I and -II.
 # These were actually taken from the DCS100, and it's
 # not at all clear what if anything should be here.
 
