--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/DB150options.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/DB150options.properties
@@ -1,6 +1,5 @@
 # DB150options.properties
 #
-#
 # Default command station options for the DB150 (Empire Builder)
 
 # Generally, CONFIG_SLOT is 127 and MIN_OPTION is 1
@@ -9,14 +8,14 @@ MIN_OPTION = 1
 
 # MAX_OPTION-MIN_OPTION+1 must be a multiple of 8
 MAX_OPTION = 57
-
-DB150ConfigFxToolTip = <html><table><tr>set sw21-22-23 as<td></td><td>to activate:</td></tr>\
+DB150ConfigFxToolTip=<html><table><tr>set sw21-22-23 as<td></td><td>to activate:</td></tr>\
   <tr>t-t-t<td></td><td>128 step mode (factory default)</td></tr>\
   <tr>t-t-c<td></td><td>14 step mode</td></tr>\
   <tr>t-c-t<td></td><td>28 step mode</td></tr>\
   <tr>c-t-t<td></td><td>128 step FX mode</td></tr>\
   <tr>c-c-t<td></td><td>28 step FX mode</td></tr>\
-  </table></html>
+  </table>\
+  <p>Note: Your firmware version may define a different pattern for OpSw 21-23</p></html>
 
 LabelTop = DB150 (Empire Builder) Programmer
 
