Dutch translation of jmrit.display.palette bundle (partial) move scale bundle to share, rename Rescale context menu key item to bypass Javadoc styling

--- a/java/src/jmri/jmrit/Bundle.properties
+++ b/java/src/jmri/jmrit/Bundle.properties
@@ -182,6 +182,7 @@ right           = Right
 center          = Center
 Name            = Name
 Length          = Length
+scale           = scale {0}:1
 
 SigSys          = Signal System
 # interface colors
