--- a/java/src/jmri/jmrit/display/DisplayBundle.properties
+++ b/java/src/jmri/jmrit/display/DisplayBundle.properties
@@ -181,7 +181,7 @@ AlignXFirst     = Align Vertically to 1st selected
 AlignYFirst     = Align Horizontally to 1st selected
 Transform       = Transform...
 #shear           = Shear...
-scale           = Scale (percentage){0}
+Rescale         = Scale (percentage){0}
 Rotation        = Rotation (degrees){0}
 Rotate          = Rotate (degrees){0}
 RotateSign      = Rotate... ({0}\u00b0)
