Fix Panel/ menu/frame titles, Palette spelling, remove unused keys Add Dutch Palette, Catalog, CPE translations

--- a/java/src/jmri/jmrit/catalog/CatalogBundle.properties
+++ b/java/src/jmri/jmrit/catalog/CatalogBundle.properties
@@ -55,7 +55,7 @@ searchWait	    = Searching directory "{0}".
 previewWait     = Loading images from directory "{0}".
 
 # ImageIndex menus and labels
-editIndexFrame  = Edit/Create Image Index
+editIndexFrame=Create/Edit Image Index
 ImageIndexRoot  = Image Index
 addNode         = Add Node
 deleteNode      = Delete Node
