--- a/java/src/jmri/jmrit/display/DisplayBundle.properties
+++ b/java/src/jmri/jmrit/display/DisplayBundle.properties
@@ -53,9 +53,6 @@ MenuItemScriptInput = Script Entry
 
 MenuItemNoPanels = (No Panels Available)
 
-LabelSelectDirectory = Select directory to display the icons it contains
-CatalogMessage = Choose a root drive to look for icons.
-
 # editor choice items
 ChooseEditor    = Choose Editor
 ChoiceText1     = Please choose an editor for your new panel:
@@ -135,8 +132,8 @@ Bold            = Bold
 Bold/italic     = Bold/Italic
 FontColor       = Font Color
 FontBackgroundColor = Background color
-SetBackgroundColor = Set Background Color
-DefaultTextColor = Set Default Text Color
+SetBackgroundColor = Set Background Color{0}
+DefaultTextColor = Set Default Text Color{0}
 LocoColor       = Loco Marker Color
 Level           = Level
 Border          = Border
@@ -239,11 +236,11 @@ LabelEditor     = Editor
 untitled		= Untitled
 
 findIconMenu    = Find Icons
-editIndexMenu   = Create/Edit Image Index
-openDirMenu     = Open a File System Directory
-searchFSMenu    = Search File System for Icons
+editIndexMenu   = Create/Edit Image Index...
+openDirMenu     = Open a File System Directory...
+searchFSMenu    = Search File System for Icons...
 
-selectTypeIcon  = Select the type of icon to Add to panel:
+selectTypeIcon  = Select the type of icon to Add to Panel:
 invisibleIcon   = invisible Icon
 ToolTipDragIcon = Drag an icon from the Catalog to replace an icon in the item group.
 ToolTipDragIconToText = Drag an icon from the Catalog to the text box to correct the url name.
