--- a/java/src/jmri/jmrit/display/palette/PaletteBundle.properties
+++ b/java/src/jmri/jmrit/display/palette/PaletteBundle.properties
@@ -112,50 +112,50 @@ PickRowMast         = To add a Signal Mast, select its row from the table
 DragReporter        = then drag the display panel below to your control panel.
 DragIconPanel       = -- drag an icon from the display panel below to your control panel
 DragIconCatalog     = -- or press [{0}] and drag an icon from the catalog to your control panel
-ToAddDeleteModify   = To change an icon in the display panel below, drag an icon from the catalog to the icon.
+ToAddDeleteModify   = To change an icon in the display below, drag an icon from the catalog to the icon.
 ToChangeName        = To change the name of an icon below, Double Click on the name.
 ToDeleteIcon        = To delete an icon, click on its name and then press the activated [{0}] button.
-ToLinkToURL         = To make clicking on this {0} link to another JMRI panel or URL, 
-enterPanel          = -- for a JMRI panel, type "frame:<panel name>" into the field at bottom.
+ToLinkToURL         = To make clicking on this {0} link to another JMRI Panel or URL, 
+enterPanel          = -- for a JMRI Panel, type "frame:<panel name>" into the field at bottom.
 enterURL            = -- for an URL, type the link (i.e. "http://etc") into the field at bottom.
-ToColorBackground   = To Choose a Color Background: Press [{0}]
-AddClockToPanel     = Drag the icon below to add a {0} to your control panel.
+ToColorBackground   = To choose a Color Background: press [{0}]
+AddClockToPanel     = Drag the icon below to add a {0} to your Control Panel.
 nullMemoryIcon      = is displayed for the Display Memory Icon when Memory is null .
-emptyMemoryIcon     = When Memory is an empty string i.e. "" , the Display Memory Icon is blank.
+emptyMemoryIcon     = When Memory is an empty string i.e. "", the Display Memory Icon is blank.
 emptyMemoryFix      = When blank, enter a value in the other memory icons to view and drag it.
 comboMemory2        = Use the [{0}] popup to add or delete items.
 comboMemory1        = The ComboBox Memory Icon sets a memory by selecting an item from the ComboBox.
 addTextAndAttrs     = Enter text and choose attributes for the label in the Preview panel.  Then
  
 # tooltips
-ToolTipAddToTable   = Press to add a new item to the above table
-ToolTipShowIcons    = Press to display the icons for the current icon set
-ToolTipEditIcons    = Press to change the icons of the current icon set or to add and delete icon sets
-ToolTipDragTableRow = Drag a row from the table to add a label of the item to the panel
-ToolTipDragSelection = Drag the sensor selections from the table to add the multisensor to the panel
-ToolTipDragIcon     = Drag an icon from this panel to add it to the control panel
-ToolTipDragCatalog  = Drag an icon directly from the Catalog Panel to add it to the control panel  
+ToolTipAddToTable   = Press to add a new item to the table
+ToolTipShowIcons    = Press to display the icons for the current Icon Set
+ToolTipEditIcons    = Press to change the icons of the current Icon Set or to add and delete Icon Sets
+ToolTipDragTableRow = Drag a row from the table to add a label of the item to the Panel
+ToolTipDragSelection = Drag the sensor selections from the table to add the MultiSensor to the Panel
+ToolTipDragIcon     = Drag an icon from the Preview pane to add it to the Control Panel
+ToolTipDragCatalog  = Drag an icon directly from the Catalog Pane to add it to the Control Panel
 ToolTipEnterText    = Enter the text for the label and press the Enter key
-ToolTipDragText     = Drag the label from the Preview panel to add it to the control panel
-ToolTipSetIconSensor = Select sensor rows in the table in the order the Sensors should activate in the multiSensor.
-ToolTipAddFamily    = Create an additonal set of icons for this device
+ToolTipDragText     = Drag the label from the Preview pane to add it to the Control Panel
+ToolTipSetIconSensor = Select sensor rows in the table in the order the Sensors should activate in the MultiSensor.
+ToolTipAddFamily    = Create an additional set of icons for this device
 ToolTipDeleteFamily = Delete this set of icons
 ToolTipClearSelection = Clear selected table rows
-ToolTipAddIcon      = Add another icon to your icon panel. Enter a name for it.  
-ToolTipDeleteIcon   = Delete an icon from your icon panel. Select the icon to be deleted. 
-ToolTipAddPosition  = Add an additional Sensor position to this icon set 
-ToolTipDeletePosition = Delete the last Sensor position from this icon set
-ToolTipEditColor    = Choose a color for the background panel
-ToolTipCatalog      = Open the Icon Catalog and drag icons from it to the panel
-ToolTipOccupancySensor = Enter the name of a Sensor or OBlock that detects occupancy for this track item 
+ToolTipAddIcon      = Add another icon to your Icon Set. Enter a name for it.
+ToolTipDeleteIcon   = Delete an icon from your Icon Set. Select the icon to be deleted.
+ToolTipAddPosition  = Add an additional Sensor position to this Icon Set
+ToolTipDeletePosition = Delete the last Sensor position from this Icon Set
+ToolTipEditColor    = Choose a background color for the Panel
+ToolTipCatalog      = Open the Icon Catalog and drag icons from there to the Panel
+ToolTipOccupancySensor = Enter the name of a Sensor or OBlock that detects occupancy for this track item
 ToolTipErrorSensor  = Enter the name of the Sensor that detects error conditions for this track item
 ToolTipPickLists    = The pick list table displays a choice of sensors or OBlocks to do the detection
-ToolTipPickFromTable = Select an item from the table and an icon set to update the panel
-ToolTipPickRowToShowIcon = Select a row from the table to show the icons for the item
+ToolTipPickFromTable = Select an item from the table and an icon set to update the Panel
+ToolTipPickRowToShowIcon = Select a row from the table to show the icons for that item
 ToolTipShowTrainName = Track section should display the name of the warranted Train when it occupies the section
 ToolTipMissingStatus = Add back a previously deleted Track Status
 ToolTipDeleteStatus = Delete a Track Status you are not going to use
-ToolTipSelectPathIcons = Check the paths this icon is needed to display the path.
+ToolTipSelectPathIcons = Check the paths that need this icon to display the path.
 ToolTipSetDefaultIcons = Change the Default Portal Icons to the selected icon family.
 
 # Decorator strings
