--- a/java/src/jmri/jmrix/anyma_dmx/AnymaDMX_ActionListBundle.properties
+++ b/java/src/jmri/jmrix/anyma_dmx/AnymaDMX_ActionListBundle.properties
@@ -1,7 +1,6 @@
 # AnymaDMX_ActionListBundle.properties
 #
-#
-#
 # Properties listing names for "Action" classes that can appear
 # in various forms in advanced preferences
 
+AddOutputEntryToolTip = Enter a number from 1 to 512 (inclusive).
