--- a/java/src/jmri/jmrix/anyma_dmx/Bundle.properties
+++ b/java/src/jmri/jmrix/anyma_dmx/Bundle.properties
@@ -6,3 +6,5 @@ NoDmxControllerTitle=Error Creating Anyma DMX Controller
 
 #ErrorAssignDialog           = The output channel{0} is currently assigned to {1}.
 #ErrorAssignLine2L           = Light can not be created as specified.
+
+AddOutputEntryToolTip = enter a number from 1 to 512 (inclusive).
