--- a/pom.xml
+++ b/pom.xml
@@ -654,7 +654,15 @@
                     </reportSet>
                 </reportSets>
             </plugin>
-        </plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>2.17</version>
+                <configuration>
+                    <configLocation>checkstyle.xml</configLocation>
+                </configuration>
+            </plugin>
+        </plugins>       
     </reporting>
 
     <dependencies>
