add ellipsis to SSL menu item name

--- a/java/src/jmri/jmrit/Bundle.properties
+++ b/java/src/jmri/jmrit/Bundle.properties
@@ -18,7 +18,7 @@ MenuItemLightTable = Lights
 MenuItemSignalTable = Signal Heads
 MenuItemReporterTable = Reporters
 MenuItemMemoryTable = Memory Variables
-MenuItemSimpleSignal = Simple Signal Logic
+MenuItemSimpleSignal = Simple Signal Logic...
 MenuItemRouteTable = Routes
 MenuItemLRouteTable = LRoutes
 MenuItemLogixTable = Logix
