--- a/java/src/jmri/jmrit/blockboss/BlockBossBundle.properties
+++ b/java/src/jmri/jmrit/blockboss/BlockBossBundle.properties
@@ -40,9 +40,9 @@ to_flashingred_rather_than_green=to Flashing Red, rather than Green.
 Limits_the_fastest_aspect_displayed = Limits the fastest Appearance displayed 
 flashing_yellow_rather_than_green = Flashing Yellow, rather than Green.
 One_aspect_faster_than_yellow_displays = One Appearance faster than Yellow displays 
-Enter_protected_turnout_number_here. = Select the protected Turnout here.
+Enter_protected_turnout_number_here. = Select the protected Turnout here or enter name for a new one.
 Sensor_active_sets_this_signal_to_Red. = This Sensor Active sets the Signal Head to Red.
-Enter_sensor_that_lights_this_signal_or = Select a Sensor that lights this Signal Head,<br>or leave blank for Always On.
+Enter_sensor_that_lights_this_signal_or = Select or enter name for a new Sensor that lights this Signal Head,<br>or leave blank for Always On.
 then_hit_return_to_load_its_information. = the existing information will be loaded for editing.
 Enter_a_new_signal_head_number_or = Select a Signal Head to attach SSL to. If present,
 Single_signal_head_on_single = Single Signal Head on single track facing double track.
