WIP: Finially getting somewhere… but more to come… ;-)

--- a/java/src/jmri/jmrix/JmrixBundle.properties
+++ b/java/src/jmri/jmrix/JmrixBundle.properties
@@ -54,6 +54,7 @@ SystemManufacturer      = System manufacturer
 SystemConnection        = System connection
 Settings                = Settings
 SerialPortLabel         = Serial port:
+UsbPortLocationLabel    = Usb Port Location:
 BaudRateLabel           = Baud rate:
 CommunicationPortLabel  = Communication Port:
 #FlowControlTitle        = Flow Control
