--- a/java/src/jmri/jmrix/anyma/AnymaDMX_Bundle.properties
+++ b/java/src/jmri/jmrix/anyma/AnymaDMX_Bundle.properties
@@ -1,4 +1,4 @@
-# AnymaDMX_ActionListBundle.properties
+# AnymaDMX_Bundle.properties
 #
 # Properties listing names for "Action" classes that can appear
 # in various forms in advanced preferences
