Fail on checkstyle violations when run in maven.

--- a/pom.xml
+++ b/pom.xml
@@ -638,6 +638,26 @@
                     <ignore>org.python:jython-standalone:2.7.0</ignore>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>2.17</version>
+                <configuration>
+                    <configLocation>checkstyle.xml</configLocation>
+                    <sourceDirectories>${project.basedir}</sourceDirectories>
+                    <includes>**/*.java,**/*.xml,**/*.properties</includes>
+                    <excludes>{$project.basedir}/target/**/*</excludes>
+                    <consoleOutput>true</consoleOutput>
+                    <violationSeverity>warning</violationSeverity>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.puppycrawl.tools</groupId>
+                        <artifactId>checkstyle</artifactId>
+                        <version>8.4</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
         </plugins>
     </build>
     <reporting>
@@ -669,6 +689,7 @@
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <version>2.17</version>
                 <configuration>
+                    <configLocation>checkstyle.xml</configLocation>
                     <dependencies>
                         <dependency>
                             <groupId>com.puppycrawl.tools</groupId>
@@ -676,7 +697,6 @@
                             <version>8.4</version>
                         </dependency>
                     </dependencies>
-                    <configLocation>checkstyle.xml</configLocation>
                 </configuration>
             </plugin>
         </plugins>
