--- a/java/src/jmri/jmrix/anyma/Bundle.properties
+++ b/java/src/jmri/jmrix/anyma/Bundle.properties
@@ -1,4 +1,6 @@
-
+#
+# AnymaDMX_Bundle.properties
+#
 #Message for error selecting Anyma DMX connection on non-Anyma DMX system
 NoDmxControllerMessage=<html>The Anyma DMX Controller can not be created.<br>This connection will not be configurable.<br><br>This is expected if not running on a Anyma DMX.</html>
 #Title for error selecting Anyma DMX connection on non-Anyma DMX system
